[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/ButtonTutorial2.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/ButtonTutorial1.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Tutorial.gd" type="Script" id=3]
[ext_resource path="res://Sound/SFX/Pop.wav" type="AudioStream" id=4]

[node name="Tutorial" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ButtonTutorial1" parent="CanvasLayer" instance=ExtResource( 2 )]
visible = false
margin_left = 293.0
margin_right = 741.0

[node name="ButtonTutorial2" parent="CanvasLayer" instance=ExtResource( 1 )]
visible = false
margin_left = 293.0
margin_right = 741.0

[node name="Pop" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
pitch_scale = 2.0
[connection signal="visibility_changed" from="CanvasLayer/ButtonTutorial1" to="." method="_on_ButtonTutorial1_visibility_changed"]
[connection signal="visibility_changed" from="CanvasLayer/ButtonTutorial2" to="." method="_on_ButtonTutorial2_visibility_changed"]
